# dagster-skipping-valid-dbt-models

./: .gitignore  README.md
dagster/: pyproject.toml  setup.py
dagster/my_dg_project/: assets.py  definitions.py  project.py  schedules.py
dbt/: dbt_project.yml  profiles.yml  pyproject.toml
dbt/models/example/: _sources.yml  child_of_3_assets.sql  sometimes_not_enabled.sql  upstream_of_python_asset.sql
